# gFTL-shared

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.MD  ChangeLog.md  GFTL_SHARED-config.cmake.in  GFTL_SHARED.mk.in  GFTL_SHAREDConfig-version.cmake.in  GFTL_SHAREDConfig.cmake.in  README.md  gFTL-shared-config-version.cmake.in  gFTL-shared-config.cmake.in
.github/workflows/: main.yml
cmake/: CMakeInstallation.cmake  Cray.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake  Lfortran.cmake  NAG.cmake  NVHPC.cmake  PGI.cmake  check_intrinsic_kinds.cmake  fortran_try.cmake
src/: CMakeLists.txt  Complex128Vector.F90  Complex32Vector.F90  Complex64Vector.F90  ComplexVector.F90  DoubleComplexVector.F90  DoubleVector.F90  Integer32Complex128Map.F90  Integer32Complex32Map.F90  Integer32Complex64Map.F90  Integer32ComplexMap.F90  Integer32DoubleComplexMap.F90  Integer32DoubleMap.F90  Integer32Integer32Map.F90  Integer32Integer64Map.F90  Integer32IntegerMap.F90  Integer32LogicalMap.F90  Integer32Real128Map.F90  Integer32Real32Map.F90  Integer32Real64Map.F90  Integer32RealMap.F90  Integer32StringMap.F90  Integer32UnlimitedMap.F90  Integer32Vector.F90  Integer64Complex128Map.F90  Integer64Complex32Map.F90  Integer64Complex64Map.F90  Integer64ComplexMap.F90  Integer64DoubleComplexMap.F90  Integer64DoubleMap.F90  Integer64Integer32Map.F90  Integer64Integer64Map.F90  Integer64IntegerMap.F90  Integer64LogicalMap.F90  Integer64Real128Map.F90  Integer64Real32Map.F90  Integer64Real64Map.F90  Integer64RealMap.F90  Integer64StringMap.F90  Integer64UnlimitedMap.F90  (+42 more)
src/v1/: CMakeLists.txt  Complex128Vector.F90  Complex32Vector.F90  Complex64Vector.F90  ComplexVector.F90  DoubleComplexVector.F90  DoubleVector.F90  Integer32Complex128Map.F90  Integer32Complex32Map.F90  Integer32Complex64Map.F90  Integer32ComplexMap.F90  Integer32DoubleComplexMap.F90  Integer32DoubleMap.F90  Integer32Integer32Map.F90  Integer32Integer64Map.F90  Integer32IntegerMap.F90  Integer32LogicalMap.F90  Integer32Real128Map.F90  Integer32Real32Map.F90  Integer32Real64Map.F90  Integer32RealMap.F90  Integer32StringMap.F90  Integer32UnlimitedMap.F90  Integer32Vector.F90  Integer64Complex128Map.F90  Integer64Complex32Map.F90  Integer64Complex64Map.F90  Integer64ComplexMap.F90  Integer64DoubleComplexMap.F90  Integer64DoubleMap.F90  Integer64Integer32Map.F90  Integer64Integer64Map.F90  Integer64IntegerMap.F90  Integer64LogicalMap.F90  Integer64Real128Map.F90  Integer64Real32Map.F90  Integer64Real64Map.F90  Integer64RealMap.F90  Integer64StringMap.F90  Integer64UnlimitedMap.F90  (+42 more)
src/v2/: CMakeLists.txt
src/v2/map-like/: Generic.F90.in  GenericWrap.F90.in
src/v2/queue-like/: Complex128Generic.F90.in  Complex32Generic.F90.in  Complex64Generic.F90.in  Complex64Generic_wrap.F90.in  ComplexGeneric.F90.in  ComplexGeneric_wrap.F90.in  DoubleComplexGeneric.F90.in  DoubleGeneric.F90.in  DoubleGeneric_wrap.F90.in  Integer32Generic.F90.in  Integer32Generic_wrap.F90.in  Integer64Generic.F90.in  Integer64Generic_wrap.F90.in  IntegerGeneric.F90.in  IntegerGeneric_wrap.F90.in  LogicalGeneric.F90.in  Real128Generic.F90.in  Real128Generic_wrap.F90.in  Real32Generic.F90.in  Real32Generic_wrap.F90.in  Real64Generic.F90.in  Real64Generic_wrap.F90.in  RealGeneric.F90.in  StringGeneric.F90.in  StringGeneric_wrap.F90.in  UnlimitedGeneric.F90.in  UnlimitedGeneric_wrap.F90.in
src/v2/vector-like/: Complex128Generic.F90.in  Complex128Generic_wrap.F90.in  Complex32Generic.F90.in  Complex32Generic_wrap.F90.in  Complex64Generic.F90.in  ComplexGeneric.F90.in  DoubleComplexGeneric.F90.in  DoubleComplexGeneric_wrap.F90.in  DoubleGeneric.F90.in  Integer32Generic.F90.in  Integer64Generic.F90.in  IntegerGeneric.F90.in  LogicalGeneric.F90.in  LogicalGeneric_wrap.F90.in  Real128Generic.F90.in  Real32Generic.F90.in  Real64Generic.F90.in  RealGeneric.F90.in  RealGeneric_wrap.F90.in  StringGeneric.F90.in  UnlimitedGeneric.F90.in
tools/: README.md  travis-install-gfe.bash
